src/Components/AboutUs/AboutUs.css
/* ... */
 #sphere2{
    position: absolute;
    /* top: 68.99%; */
    left: 24.5%;
    z-index: 10;
    animation-name: blueMove;
    animation-fill-mode: forwards;
    animation-iteration-count: 1;
    animation-duration: 5s;
    animation-delay: 3s;
    opacity: 0;

 }

 @keyframes blueMove{
    0%{
        transform: rotateZ(90deg) translateY(0%);
        opacity: 0.3;
    }
    25%{
        transform: translateY(62%);
        opacity: 1;
    }
    75% {
        transform: translateY(62%) translateX(870%);
        opacity: 1
    }
    100%{
        transform: translateX(925%) rotateZ(-90deg);
        opacity: 0;
    }
}
/* Bottom tubes and lines styling */
#sphere4{
    position: absolute;
    z-index: 10;
    left: 89%;
    animation-name: yellowMove;
    animation-fill-mode: forwards;
    animation-delay: 13s;
    animation-duration: 3s;
    opacity: 0;
    animation-iteration-count: 1;
}

@keyframes yellowMove {
    0%{
        transform: rotateZ(90deg) translateY(0%);
        opacity: 1;
    }
    50%{
        transform: translateY(59%);
        opacity: 1;
    }
    100%{
        transform: translateY(60%) translateX(600%);
        opacity: 1;
        display: none;
    }
}



#line33{
    position: absolute;
    width: 408%;
    height: 20%;
    left: -155%;
    margin-top: 1.5%;
}
#line34{
    position: absolute;
    width: 408%;
    height: 20%;
    left: -155%;
    margin-top: 3%;

}
#line35{
    position: absolute;
    width: 408%;
    height: 20%;
    left: -155%;
    margin-top: 4.2%;
}


/* Adding media queries */

/* Continue from tmrw - 1024px */
@media only screen and (min-width: 1000px) and (max-width: 1100px){
    #redExt{
        display: none;
    }
    #yellExt{
        display: none;
    }
    h4{
        font-size: 20px;
        text-align: right;
        font-family: Avenir;
        /* line-height: 22px; */
    }
    p{
        font-size: 18px;
        font-family: Avenir;
        /* line-height: 20px; */
    }
    .box1{
        width: 220px;
        height: 250px;
    }

    .box2{
        width: 220px;
        height: 250px;
    }

    .box3{
        width: 220px;
        height: 250px;
    }

    #sphere{
        height: 35px;
        width:35px;
        margin-top: 23.8%;
        left: -5.5%;
    }

    #sphere2{
        height: 35px;
        width:35px;
        left: 24%;
    }

    #sphere3{
        height: 35px;
        width:35px;
        margin-top: 26.5%;
    }

    #sphere4{
        height: 35px;
        width:35px;
        left: 90.5%;
    }

    #redWholePipe{
        width: 120.6px;
        height: 60px;
        margin-top: 25%;
        left:-2%;
    }

    #blueWholePipe{
        position: absolute;
        width: 300.6px;
        height: 80px;
        left: 25.5%;
        margin-top: -2%;
    }
    #greenWholePipe{
        position: absolute;
        width: 300.6px;
        height: 80px;
        left: 47.7%;
        margin-top: 23.88%;
    }
    #yellowPipe{
        width: 120.6px;
        height: 60px;
        left: 89.7%;
        margin-top: -1.2%; 
    }

    @keyframes blueMove{
        0%{
            transform: rotateZ(90deg) translateY(0%);
            opacity: 0.3;
        }
        25%{
            transform: translateY(70%);
            opacity: 1;
        }
        75% {
            transform: translateY(80%) translateX(780%);
            opacity: 1
        }
        100%{
            transform: translateX(835%) rotateZ(-90deg);
            opacity: 0;
        }
    }
    @keyframes yellowMove {
        0%{
            transform: rotateZ(90deg) translateY(0%);
            opacity: 1;
        }
        50%{
            transform: translateY(70%);
            opacity: 1;
        }
        100%{
            transform: translateY(82%) translateX(600%);
            opacity: 0;
            /* display: none; */
        }
    }

    @keyframes redMove{
        0%{
            transform: translateX(0%);
            opacity: 1;
        }
        50%{
            transform: translateX(260%);
            opacity: 1;
        }
        75%{
            transform: translateX(322%) rotateZ(90deg);
            opacity: 1;
        }
        100%{
            transform: translateX(322%) translateY(75%) rotateZ(90deg);
            opacity: 0;
            display: none;
        }
    }
    @keyframes greenMove {
        0%{
            transform: rotate(-90deg) translateY(0%);
            opacity: 0.3;
        }
        25%{
            transform: translateY(-74%);
            opacity: 1;
        }
        75%{
            transform: translateY(-74%) translateX(770%);
            opacity: 1;
        }
        100%{
            transform: translateX(820%) rotateZ(90deg);
            opacity: 0;
            /* display: none; */
        }
    }

}
/* ... */

